--- a/src/assets/css/sass/_piaf.style.scss
+++ b/src/assets/css/sass/_piaf.style.scss
@@ -1818,6 +1818,10 @@ button {
   #img-logo{
     height: 70px;
 
+    @include respond-below(lg) {
+      height: 50px;
+    }
+
     @include respond-below(md) {
       height: 50px;
     }
