--- a/src/assets/css/sass/_piaf.style.scss
+++ b/src/assets/css/sass/_piaf.style.scss
@@ -8079,3 +8079,7 @@ input:-webkit-autofill {
     }
   }
 }
+.modal-dialog {
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
