--- a/src/assets/css/sass/_piaf.style.scss
+++ b/src/assets/css/sass/_piaf.style.scss
@@ -8083,3 +8083,6 @@ input:-webkit-autofill {
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
 }
+.cursor {
+  cursor: pointer;
+}
