--- a/src/assets/css/sass/_piaf.style.scss
+++ b/src/assets/css/sass/_piaf.style.scss
@@ -8086,3 +8086,7 @@ input:-webkit-autofill {
 .cursor {
   cursor: pointer;
 }
+
+.colorTheme {
+  background-color: $foreground-color !important
+}
