--- a/src/assets/css/sass/_piaf.style.scss
+++ b/src/assets/css/sass/_piaf.style.scss
@@ -8090,3 +8090,7 @@ input:-webkit-autofill {
 .colorTheme {
   background-color: $foreground-color !important
 }
+
+.modal-backdrop {
+  background-color: rgba(0, 0, 0, 0.72);
+}
