--- a/src/assets/css/sass/_piaf.style.scss
+++ b/src/assets/css/sass/_piaf.style.scss
@@ -8094,3 +8094,7 @@ input:-webkit-autofill {
 .modal-backdrop {
   background-color: rgba(0, 0, 0, 0.72);
 }
+
+.print_bg_header {
+  background: url('/img/header_lettre.png') !important
+}
