--- a/src/assets/css/sass/themes/piaf.dark.blue.scss
+++ b/src/assets/css/sass/themes/piaf.dark.blue.scss
@@ -8,6 +8,8 @@ $dark-btn-background: #8d8d8d;
 $light-btn-background: #e4e4e4;
 $button-text-color: #d0d0d0;
 
+$bg-degrade: #313131;
+
 $theme-color-1: #145388;
 $theme-color-2: #3582b3;
 $theme-color-3: #6c90a1;
