--- a/src/assets/css/sass/themes/piaf.light.blue.scss
+++ b/src/assets/css/sass/themes/piaf.light.blue.scss
@@ -6,8 +6,9 @@ $input-background: white;
 
 $dark-btn-background: #131113;
 $light-btn-background: #ececec;
-
 $button-text-color: #fff;
+
+$bg-degrade: linear-gradient(to right top, #75a1ff, #72b4ff, #7ec4fc, #95d2f6, #b2dff2);
 
 $theme-color-1: #3171f9;
 $theme-color-2: #2a93d5;
