--- a/src/assets/css/sass/_piaf.style.scss
+++ b/src/assets/css/sass/_piaf.style.scss
@@ -94,7 +94,7 @@ $error-color: #c43d4b;
 html {
   width: 100%;
   height: 100%;
-  background: $background-color;
+  background: $bg-degrade /* $background-color */;
 }
 
 :root {
@@ -129,7 +129,7 @@ body {
   font-size: 0.8rem;
   font-weight: 400;
   color: $primary-color;
-  background: $background-color;
+  background: transparent;
 
   &.background {
     height: 100%;
@@ -5646,7 +5646,7 @@ input:-webkit-autofill {
     margin-top: 0;
     margin-bottom: 0;
     height: 100%;
-    max-width: 380px;
+    max-width: 500px;
   }
 
   .modal-content {
@@ -8097,4 +8097,7 @@ input:-webkit-autofill {
 
 .print_bg_header {
   background: url('/img/header_lettre.png') !important
+}
+.radius-20 {
+  border-radius: 20px;
 }
